# eeep

./: CHANGELOG.md  README.md  cabal.project  eeep.cabal
src/Eeep/: IO.hs
src/Eeep/Typeclasses/: Binary.hs
src/Eeep/Types/: Effect.hs  Opcode.hs  Streams.hs
src/Eeep/Types/Effect/: Projectile.hs  School.hs  Sectype.hs
src/Eeep/Types/Opcode/: Dice.hs  DiceNumber.hs  DiceSides.hs  Duration.hs  OpType.hs  Parameter.hs  Power.hs  Probability.hs  ResistDispel.hs  Resref.hs  SaveBonus.hs  SaveFlags.hs  Special.hs  Target.hs  Timing.hs
src/Eeep/Utils/: Bits.hs  Char.hs  Enum.hs
