cabal-version:      3.0
name:               trisagion
version:            0.1.0.0
synopsis:           A library for modding BG EE games.
description:        Please see the README on GitHub at <https://github.com/lambda-dom/eeep#readme>
category:           Data
homepage:           https://github.com/lambda-dom/eeep#readme
author:             lambda-dom
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         grodrigues.math@gmail.com
copyright:          2025 G. Rodrigues
build-type:         Simple
extra-doc-files:
    LICENSE
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/lambda-dom/eeep

library
    default-language: GHC2021
    default-extensions:
        DerivingStrategies
        DerivingVia
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-export-lists
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints
        -Wmissing-deriving-strategies
        -Wunused-packages
    hs-source-dirs:
        src
    build-depends:
        -- GHC 9.6
        base >=4.18 && <4.19,
        -- optics-core >= 0.4.1 && <0.4.2,
    other-modules:
    exposed-modules:
        Eeep.Types.Opcode.Probability
        Eeep.Types.Opcode.ResistDispel
        Eeep.Types.Opcode.SaveBonus
        Eeep.Types.Opcode.Target
        Eeep.Types.Opcode.Timing
