cabal-version:      3.0
name:               eeep
version:            0.1.0.0
synopsis:           A library for modding BG EE games.
description:        Please see the README on GitHub at <https://github.com/lambda-dom/eeep#readme>
category:           Data
homepage:           https://github.com/lambda-dom/eeep#readme
author:             lambda-dom
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         grodrigues.math@gmail.com
copyright:          2025 G. Rodrigues
build-type:         Simple
extra-doc-files:
    LICENSE
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/lambda-dom/eeep

library
    default-language: GHC2021
    default-extensions:
        DerivingStrategies
        DerivingVia
        RecordWildCards
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-export-lists
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints
        -Wmissing-deriving-strategies
        -Wunused-packages
    hs-source-dirs:
        src
    build-depends:
        -- GHC 9.6 - 9.8
        base >=4.18 && <4.20,
        contravariant >=1.5 && <1.6,
        filepath >= 1.4 && <1.5,
        file-io >= 0.1 && <0.2,
        bytestring >=0.11 && <0.13,
        vector >=0.13 && <0.14,
        optics-core >= 0.4.1 && <0.4.2,
        -- Non-hackage libraries.
        trisagion >=0.1 && <0.2,
        mono >=0.1 && <0.2,
    other-modules:
    exposed-modules:
        Eeep.Typeclasses.Binary
        Eeep.Types.Opcode.OpType
        Eeep.Types.Opcode.Target
        Eeep.Types.Opcode.Power
        Eeep.Types.Opcode.Parameter
        Eeep.Types.Opcode.Timing
        Eeep.Types.Opcode.ResistDispel
        Eeep.Types.Opcode.Duration
        Eeep.Types.Opcode.Probability
        Eeep.Types.Opcode.Resref
        Eeep.Types.Opcode.DiceNumber
        Eeep.Types.Opcode.DiceSides
        Eeep.Types.Opcode.SaveBonus
        Eeep.Types.Opcode.SaveFlags
        Eeep.Types.Opcode.Special
        Eeep.Types.Opcode
        Eeep.Types.Effect.Projectile
        Eeep.Types.Effect.School
        Eeep.Types.Effect.Sectype
        Eeep.Types.Effect
        Eeep.IO
