cabal-version:      3.0
name:               eeep
version:            0.1.0.0
synopsis:           A Haskell library for modding Infinity Engine games.
description:        Please see the README on GitHub at <https://github.com/lambda-dom/eeep#readme>
category:           Data
homepage:           https://github.com/lambda-dom/eeep#readme
author:             lambda-dom
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         grodrigues.math@gmail.com
copyright:          2026 G. Rodrigues
build-type:         Simple
tested-with:
extra-doc-files:
    LICENSE
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/lambda-dom/eeep

library
    default-language: GHC2021
    default-extensions:
        DerivingStrategies
        DuplicateRecordFields
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-export-lists
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints
        -Wmissing-deriving-strategies
        -Wunused-packages
        -- Prepare for dependent types.
        -Wterm-variable-capture
    hs-source-dirs:
        src
    build-depends:
        -- GHC >= 9.10 && < 9.12
        base >=4.20 && <4.21,
        -- Libraries.
        contravariant >=1.5 && <1.6,
        mtl >=2.3 && <2.4,
        optics-core >= 0.4.2 && <0.4.3,
        -- bytestring >=0.12 && <0.13,
        -- Non-hackage libraries.
        trisagion >=0.1 && <0.2,
    other-modules:
    exposed-modules:
        Eeep.Utils.Enum
        Eeep.Typeclasses.Binary
        Eeep.Types.Opcode.Target
        Eeep.Types.Opcode.Parameter
        Eeep.Types.Opcode.Power
        Eeep.Types.Opcode.Timing
        Eeep.Types.Opcode.Duration
        Eeep.Types.Opcode.Probability
        Eeep.Types.Opcode.ResistDispel
        Eeep.Types.Opcode.DiceNumber
        Eeep.Types.Opcode.DiceSides
        Eeep.Types.Opcode.SaveBonus
        Eeep.Types.Opcode.Special
